crates/zendriver/src/snapshots/zendriver__browser__tests__default_launch_flags.snap
---
source: crates/zendriver/src/browser.rs
expression: flags
---
- "--remote-debugging-port=0"
- "--user-data-dir=/tmp/test-user-data"
- "--no-first-run"
- "--no-default-browser-check"
- "--password-store=basic"
- "--disable-save-password-bubble"
- "--disable-features=PasswordManagerOnboarding,AutofillServerCommunication"
- "--headless=new"
- "--disable-gpu"
